src/tests/snapshots/synoik__tests__window_opening__check_target_size@fsF-omT-ofT-dwP0.25-dhU-b-wfsAU.snap
---
source: src/tests/window_opening.rs
description: "open fullscreen: false\nopen maximized: true\nopen floating: true\ndefault column width: P0.25\ndefault window height: U\nborder on\nwant fullscreen: AU"
expression: snapshot
---
initial configure:
size: 312 × 0, bounds: 1272 × 712, states: []

post-map configures:
size: 312 × 0, bounds: 1272 × 712, states: []
size: 312 × 1, bounds: 1272 × 712, states: [Activated]
